<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageSearchSettings" >

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:onClick="onSaveItems"
        android:text="@string/savebtn" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_toRightOf="@+id/tvColor"
        android:ems="10" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveBtn"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_marginBottom="81dp"
        android:text="@string/siteFilter" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spinImageSize"
        android:layout_toLeftOf="@+id/spinImageSize"
        android:text="@string/imageSize" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:text="@string/advancedSearch" />

    <Spinner
        android:id="@+id/spinImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveBtn"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:entries="@array/imageSizes"
        android:prompt="@string/imageSmall" />

    <Spinner
        android:id="@+id/spinImageColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinImageSize"
        android:layout_below="@+id/spinImageSize"
        android:entries="@array/imageColors"
        android:prompt="@string/colorPink" />

    <Spinner
        android:id="@+id/spinImageTy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinImageColor"
        android:layout_toRightOf="@+id/tvColor"
        android:entries="@array/imageTypes" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinImageColor"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/spinImageColor"
        android:layout_toLeftOf="@+id/spinImageColor"
        android:text="@string/colorFilter" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinImageTy"
        android:layout_alignLeft="@+id/tvColor"
        android:layout_below="@+id/spinImageColor"
        android:text="@string/imageType" />

</RelativeLayout>